care-australia-uat/force-app/main/default/objects/Sequence_Shift_User__mdt/Sequence_Shift_User__mdt.object-meta.xml
<CustomObject>
    <label>Sequence Shift User</label>
    <pluralLabel>Sequence Shift Users</pluralLabel>
</CustomObject>