care-australia-uat/force-app/main/default/objects/Sequence_Shift_User__mdt/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>