care-australia-uat/force-app/main/default/objects/Sequence_Shift_User__mdt/fields/Instance4Object__c.field-meta.xml
<CustomField>
    <fullName>Instance4Object__c</fullName>
    <label>Instance4Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>