care-australia-uat/force-app/main/default/objects/Sequence_Shift_User__mdt/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <label>Instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>