care-australia-uat/force-app/main/default/objects/Sequence_Shift_User__mdt/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>