care-australia-uat/force-app/main/default/objects/Sequence_Shift_User__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Username__c</columns>
    <columns>Token__c</columns>
    <columns>Instance4Object__c</columns>
    <columns>Instance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Custom</label>
    <language>en_US</language>
</ListView>